* fix vod alignment breaking on weird thnail sizes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -250,6 +250,7 @@ body {
 }
 
 .vod-entry img, .vid-entry img {
+	max-height: 202.5px;
 	width: 100%;
 	object-fit: cover;
 	margin-top: -9.5%;
